--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>I don't suck</h1>
-<%=javascript_pack_tag 'hello\hello_react'  %>
+<h1>We don't suck</h1>
+<%=javascript_pack_tag 'application' %>
+<div id="app"></div>
