--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vso</title>
+    <meta charset="utf-8" />
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
+    <title>VSO</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%=javascript_pack_tag 'application' %>
+    <%=stylesheet_pack_tag 'stylesheets/layout'.os_path! %>
   </head>
 
   <body>
-    <%= yield %>
+
+
+  <div class="layout_wrapper">
+
+    <div class="layout_header_wrapper">
+
+      <div class="layout_header">
+
+        <img src="<%= asset_pack_path 'packs/images/VA-header.png'.os_path! %>" />
+
+        this is the header boyee!
+      </div>
+    </div>
+
+    <div class="main_content_wrapper">
+
+      <div class="main_content">
+        <%= yield %>
+
+        <p>this is some body this is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some bodythis is some body</p>
+      </div>
+    </div>
+    <div class="layout_footer">
+      <div class="left">float left</div>
+      <div class="right">float right</div>
+      copywrite center
+    </div>
+  </div>
   </body>
 </html>
