--- a/app/frontend/packs/stylesheets/layout.css
+++ b/app/frontend/packs/stylesheets/layout.css
@@ -50,10 +50,35 @@ html {
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
     display: block;
 }
+
 body {
     font: 12px/18px Arial, sans-serif;
     height: 100%;
     overflow: hidden;
+
+    /*background: navy;*/
+}
+
+.kahuna {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.kheader {
+    height: 100px;
+    background: rgba(50, 100, 255, 0.18);
+}
+
+.kmain {
+    overflow: auto;
+    height: calc(100vh - 120px); /* adjust */
+    background: cornsilk;
+}
+
+.kfooter {
+    height: 20px;
+    background: black;
+    color: white;
 }
 
 /* start here */
@@ -115,10 +140,18 @@ body {
     float: left;
     padding-left: 10px;
 }
-.right {
+
+div.right {
     float: right;
     padding-right: 10px;
 }
+
+.inline_block {
+    display: inline-block;
+    margin: 1em;
+}
+
+
 
 
 
