--- a/app/frontend/packs/stylesheets/layout.css
+++ b/app/frontend/packs/stylesheets/layout.css
@@ -55,8 +55,6 @@ body {
     font: 12px/18px Arial, sans-serif;
     height: 100%;
     overflow: hidden;
-
-    /*background: navy;*/
 }
 
 .kahuna {
@@ -65,6 +63,7 @@ body {
 }
 
 .kheader {
+    display: flex;
     height: 100px;
     background: rgba(50, 100, 255, 0.18);
 }
@@ -72,7 +71,7 @@ body {
 .kmain {
     overflow: auto;
     height: calc(100vh - 120px); /* adjust */
-    background: cornsilk;
+    background: transparent;
 }
 
 .kfooter {
