added style to remove autocomplete overlay due to issue with form validation

--- a/app/frontend/packs/stylesheets/layout.css
+++ b/app/frontend/packs/stylesheets/layout.css
@@ -150,9 +150,12 @@ div.right {
     margin: 1em;
 }
 
-
-
-
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+}
 
 /*
 
