--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>VSO</title>
+    <title>DRC</title>
     <%= csrf_meta_tags %>
     <%= include_gon %>
 
