--- a/config/props/log.properties.erb
+++ b/config/props/log.properties.erb
@@ -1,19 +1,20 @@
 pattern = [%l][%d][%F][%L] %m\n
 #Do not give absolute paths for filename and file_name_rails.  The relative path is base on catalina.home
 #filename is the name of the log file that contains developer logs and third party logs (such as faraday)
-filename = vso.log
+filename = drc.log
 #filename_rails is the log where rails and active record logs its stuff.
-filename_rails = rails_vso.log
+filename_rails = rails_drc.log
 #filename_admin is the log where certain administrative events may be logged.
-filename_admin = vso_admin.log
-filename_error = vso_err.log
+filename_admin = drc_admin.log
+filename_error = drc_err.log
 #valid values for roll_by are 'number' and 'date'
 roll_by = number
 #caller_tracing values are true or false.  If set to true the file and line number data is logged
 caller_tracing = true
 #if true, we add a console appender
 append_stdout = false
-
+#force log color on in production mode by hostname (comma separated)
+color_hosts = <%=['MSI', 'Evanss-MBP', 'sanjay-i3'].join(',')%>
 ########################################################################################################################
 # environment specific setup (development, test, or production)
 ########################################################################################################################
