code cleanup - sort of

--- a/app/frontend/packs/stylesheets/layout.css
+++ b/app/frontend/packs/stylesheets/layout.css
@@ -1,4 +1,4 @@
-/* Eric Meyer's CSS Reset */
+/* Eric Meyer's CSS Reset
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,6 +19,7 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
+*/
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -65,7 +66,8 @@ body {
 .kheader {
     display: flex;
     height: 100px;
-    background: rgba(50, 100, 255, 0.18);
+    background: transparent; /*rgba(50, 100, 255, 0.18);*/
+    border-bottom: thin navy solid;
 }
 
 .kmain {
